--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
             python3 -m venv venv
             . venv/bin/activate
             export APP_SETTINGS="config.TestingWithDBConfig"
+            export RESTART=True
             coverage run -m unittest discover
             coverage run -m pytest
             coverage report -m
